AutomationTestCases/force-app/main/default/objects/automationtest__c/automationtest__c.object-meta.xml
<CustomObject>
    <label>automationtest</label>
    <nameField>
        <label>automationtest</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>automationtests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>