AutomationTestCases/force-app/main/default/objects/automationtest__c/fields/testfield10__c.field-meta.xml
<CustomField>
    <fullName>testfield10__c</fullName>
    <label>testfield10</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>