AutomationTestCases/force-app/main/default/objects/automationtest__c/fields/testfield11__c.field-meta.xml
<CustomField>
    <fullName>testfield11__c</fullName>
    <label>testfield11</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>