AutomationTestCases/force-app/main/default/objects/automationtest__c/fields/testfield12__c.field-meta.xml
<CustomField>
    <fullName>testfield12__c</fullName>
    <label>testfield12</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>