AutomationTestCases/force-app/main/default/objects/automationtest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>testfield1__c</columns>
    <columns>testfield2__c</columns>
    <columns>testfield3__c</columns>
    <columns>testfield4__c</columns>
    <columns>testfield5__c</columns>
    <columns>testfield6__c</columns>
    <columns>testfield7__c</columns>
    <columns>testfield8__c</columns>
    <columns>testfield9__c</columns>
    <columns>testfield10__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>